--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -139,7 +139,7 @@
 						[% ELSE %]
 							[% IF grupos %]
 								<span id="grupos_[% id1 %]">
-                                    <ul class="lista_limpia">
+                                    <ul class="listado_sin_margen">
 									[% FOREACH grupos %]
                                         [% valor = '' %]
 										
