--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -144,7 +144,7 @@
                                         [% valor = '' %]
 										
                                         [% IF edicion %]
-											[% valor = edicion %]
+											[% valor = "<b>" _  edicion  _  "</b>" %]
 										[% END %]
                                         
                                         [% IF anio_publicacion %]
