--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -44,8 +44,12 @@
                                                          columns         => ['[% "Tipo"|i18n %]','[% "T&iacute;tulo"|i18n %]','[% "Autor"|i18n %]',
                                                                              '[% "Edici&oacute;n"|i18n %]','[% "Disponibilidad"|i18n %]', [% IF signatura_filter %] '[% "Signatura"|i18n %]' [% END %],
                                                                             ],
-                                                          order          => {  'Titulo' =>'titulo', 
+                                                          order          => {  'Tipo' => '',
+                                                                               'Titulo' =>'titulo', 
                                                                                'Autor' => 'autor',
+                                                                               'Edicion' => '',
+                                                                               'Dsponibilidad' =>'',
+                                                                               [% IF signatura_filter %] 'Signatura' => '' [% END %]
                                                                              }              
                                                          
                              ) ;
