--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -299,14 +299,17 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
     [% IF nivel2_template == 'ANA' %]
-    <ul>
-		<li>
-    		Título del registro fuente: [% nivel1_titulo_padre %]
-		</li>
-		<li>
-            ISBN: [% nivel1_isbn_padre %]	
-        </li>
-		<li>		
+    
+        <dt class="inline left rightMargin">Título del registro fuente:</dt>
+        <dd>[% nivel1_titulo_padre %]</dd>
+        
+        <dt class="inline left rightMargin">ISBN:</dt>
+        <dd>[% nivel1_isbn_padre %</dd>
+        
+        <dt class="inline left rightMargin">ISBN:</dt>
+        <dd>[% nivel1_isbn_padre %</dd>
+
+		<dt>		
             [% PERL %]
                 print C4::AR::Filtros::link_to(   text      => "Detalle del registro fuente",
                                                   url       => "[% url_prefix %]/catalogacion/estructura/detalle.pl", 
@@ -315,7 +318,7 @@
                                                   class     => 'btn btn-warning'
                                             );
             [% END %]
-        </li>
+        </dt>
     </ul> 
     [% ELSE %]
 		<div class="alert fade in">
