ejemplares del grupo fix template

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -304,10 +304,10 @@
         <dd>[% nivel1_titulo_padre %]</dd>
         
         <dt class="inline left rightMargin">ISBN:</dt>
-        <dd>[% nivel1_isbn_padre %</dd>
+        <dd>[% nivel1_isbn_padre %]</dd>
         
         <dt class="inline left rightMargin">ISBN:</dt>
-        <dd>[% nivel1_isbn_padre %</dd>
+        <dd>[% nivel1_isbn_padre %]</dd>
 
 		<dt>		
             [% PERL %]
