--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -298,6 +298,8 @@
 
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
+
+debug [% enable_nivel3 %] fin
     [% IF nivel2_template == 'ANA' %]
     
         <dt class="inline left rightMargin">Título del registro fuente:</dt>
