--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -299,8 +299,8 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
 
-    [% IF enable_nivel3 %]
-<!--    [% IF nivel2_template == 'ANA' %]-->
+debug [% enable_nivel3 %] fin
+    [% IF nivel2_template == 'ANA' %]
     
         <dt class="inline left rightMargin">Título del registro fuente:</dt>
         <dd>[% nivel1_titulo_padre %]</dd>
