--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -299,8 +299,7 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
 
-debug [% enable_nivel3 %] fin
-    [% IF nivel2_template == 'ANA' %]
+    [% IF nivel2_template == 'ANA' ||  IF nivel2_template == 'ELE' %]
     
         <dt class="inline left rightMargin">Título del registro fuente:</dt>
         <dd>[% nivel1_titulo_padre %]</dd>
@@ -321,9 +320,11 @@ debug [% enable_nivel3 %] fin
         </dt>
 
     [% ELSE %]
+    
 		<div class="alert fade in">
            <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
 		</div>    
+		
     [% END %]
 [% END %]
 
