--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -299,7 +299,7 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
 
-    [% IF nivel2_template == 'ANA' ||  IF nivel2_template == 'ELE' %]
+    [% IF nivel2_template == 'ANA' ||  nivel2_template == 'ELE' %]
     
         <dt class="inline left rightMargin">Título del registro fuente:</dt>
         <dd>[% nivel1_titulo_padre %]</dd>
