--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -299,7 +299,7 @@
 <script type="text/javascript">makeToggle('ejemplaresDelGrupo[% id2 %]','trigger_2_[% id2 %]',null,false);</script>
 [% ELSE %]
 
-    [% IF nivel2_template == 'ANA' ||  nivel2_template == 'ELE' %]
+    [% IF nivel2_template == 'ANA' %]
     
         <dt class="inline left rightMargin">Título del registro fuente:</dt>
         <dd>[% nivel1_titulo_padre %]</dd>
@@ -321,9 +321,13 @@
 
     [% ELSE %]
     
-		<div class="alert fade in">
-           <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
-		</div>    
+        [% IF nivel2_template != 'ELE' %]
+    
+		    <div class="alert fade in">
+               <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
+		    </div> 
+		
+		[% END %]   
 		
     [% END %]
 [% END %]
