--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -73,9 +73,10 @@
 	
 	
 	<fieldset>
-		   <div class="page-header">
-            <h1>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %] <small>([% nivel1_template %])</small></h1>
-           </div>
+		   	<div class="page-header">
+        		<h1>#[% id1 %] - [% titulo %] <small>([% nivel1_template %])</small></h1>
+            	<h2>[% autor %] </h2>	
+           	</div>
 		      
 	
 		<div id="detalle1" class="detalle1">
@@ -165,7 +166,7 @@
         <section id="detalle_grupo_[% id2 %]">
 	        <fieldset>
 	            <legend class="trigger_3_[% id2 %] click">
-	               <div class="alert alert-success">
+	               <div class="group_separator">
 						<div class="page-header">
 	                       <h2>[% "Detalle de Nivel 2 " | i18n %] <small>([% edicion %])</small> <small>[% "GRUPO" | i18n %] [% id2 %] - [% tipo_documento %] ([% nivel2_template %])</small></h2>
                         </div>                   
@@ -294,15 +295,16 @@
                               </div>
                           [% END %]
  
-                        <span id="ejemplaresDelGrupo[% id2 %]">
-                            [% INCLUDE "estructura/ejemplaresDelGrupo.tmpl" %]
-                        </span>
 	                    [% IF nivel1_analiticas_cant %]
                                   [% INCLUDE "estructura/analiticasDelGrupo.tmpl" %]
                         [% END %]
 	
 	                [% INCLUDE  "partials/e-docs_grupo.inc" %]
 	                [% INCLUDE  "partials/estantes_grupo.inc" %]
+
+                        <span id="ejemplaresDelGrupo[% id2 %]">
+                            [% INCLUDE "estructura/ejemplaresDelGrupo.tmpl" %]
+                        </span>
 	                <div class="ticket" id="ticket" ></div>
 	            </div> <!--Fin <div id="grupo[  id2 ]-->
 	        </fieldset>
