--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -606,3 +606,5 @@ body {
 .listado_sin_margen{
     list-style-type: none;
 }
+
+legend div.group_separator {background-color:#dff0d8;border-color:#d6e9c6;color:#468847;padding-left: 10px;}
