--- a/dev-plugins/bootstrapless/variables.less
+++ b/dev-plugins/bootstrapless/variables.less
@@ -33,8 +33,8 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @white;
-@textColor:             @grayDark;
+@bodyBackground:        @red; //white;
+@textColor:             @yellow; //grayDark;
 
 
 // Links
