--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/buscarUsuarioResult.tmpl
@@ -4,6 +4,7 @@
           makeToggle('datos_tabla_div_user','trigger',null,false);
           $('.user_pic_fancy').fancybox();
           disableAlert();
+          $('#navBarResult').html('');
       });
 </script>
 
