--- a/dev-plugins/bootstrapless/local/variables.less
+++ b/dev-plugins/bootstrapless/local/variables.less
@@ -16,7 +16,7 @@
 @gray:                  #555;
 @grayLight:             #999;
 @grayLighter:           #eee;
-@white:                 #fff;
+@white:                 @yellow; //#fff;
 
 
 // Accent colors
@@ -33,8 +33,8 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @white;
-@textColor:             @grayDark;
+@bodyBackground:        @red; //white;
+@textColor:             @yellow; //grayDark;
 
 
 // Links
