--- a/dev-plugins/bootstrapless/meran.less
+++ b/dev-plugins/bootstrapless/meran.less
@@ -15,7 +15,7 @@
 @import "reset.less";
 
 // Core variables and mixins
-@import "variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "local/variables.less"; // Modify this for custom colors, font-sizes, etc
 @import "mixins.less";
 
 // Grid system and page structure
