amarello carioca out

--- a/dev-plugins/bootstrapless/local/variables.less
+++ b/dev-plugins/bootstrapless/local/variables.less
@@ -16,7 +16,7 @@
 @gray:                  #555;
 @grayLight:             #999;
 @grayLighter:           #eee;
-@white:                 @yellow; //#fff;
+@white:                 #fff;
 
 
 // Accent colors
