--- a/intranet/htdocs/intranet-tmpl/estantes/estantesGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estantesGrupo.tmpl
@@ -29,7 +29,7 @@
                 [% FOREACH auxEstante IN listaEstantes %]
                     [% PERL %]
                       print C4::AR::Filtros::link_to( text =>     "[% auxEstante.getEstante %]",
-                                     url=>"[% url_prefix %]/estantes/verDetalleEstante.pl", 
+                                     url=>"[% url_prefix %]/estantes/estante.pl", 
                                       params =>   ["id_estante=[% auxEstante.getId %]"],
                                       title =>    "[% 'Mostrar Detalle del Estante' | i18n %]",
                                       class => "link_to_detail"
