actualizado el estilo

--- a/dev-plugins/bootstrapless/local/variables.less
+++ b/dev-plugins/bootstrapless/local/variables.less
@@ -16,7 +16,7 @@
 @gray:                  #555;
 @grayLight:             #999;
 @grayLighter:           #eee;
-@white:                 @yellow; //#fff;
+@white:                 #fff;
 
 
 // Accent colors
@@ -33,8 +33,8 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @red; //white;
-@textColor:             @yellow; //grayDark;
+@bodyBackground:        @white;
+@textColor:             @grayDark;
 
 
 // Links
@@ -123,8 +123,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "/includes/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/includes/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
