--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -82,6 +82,7 @@ function obtenerDatosDelEjemplar(){
 
 function updateObtenerDatosDelEjemplar(responseText){
     $('#datos_ejemplar').html(responseText);
+    $('#datos_ejemplar').show();
     if (responseText == ""){
     	alert ('[% "Hubo un problema con el ejemplar" | i18n %]');
     }
