agregue el tema del opac

--- a/dev-plugins/bootstrapless/intranet/default/variables.less
+++ b/dev-plugins/bootstrapless/intranet/default/variables.less
@@ -17,6 +17,7 @@
 @grayLight:             #999;
 @grayLighter:           #eee;
 @white:                 #fff;
+@verdecitoclaro:	#D0DCE0;
 
 
 // Accent colors
@@ -123,8 +124,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "/includes/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/includes/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
