--- a/dev-plugins/bootstrapless/opac/default/variables.less
+++ b/dev-plugins/bootstrapless/opac/default/variables.less
@@ -17,6 +17,7 @@
 @grayLight:             #999;
 @grayLighter:           #eee;
 @white:                 #fff;
+@verdecitoclaro:	#D0DCE0;
 
 
 // Accent colors
