indice nivel 2, ordenacion busqueda catalogo

--- a/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/busquedaResult.tmpl
@@ -51,6 +51,7 @@
                                                                                'Disponibilidad' =>'',
                                                                                [% IF signatura_filter %] 'Signatura' => '' [% END %]
                                                                              },
+                                                        order_name_function => "busqueda_catalogo"
                                                         
                                                          
                              ) ;
