nav bar en intra

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -17,9 +17,9 @@
                 loaderImgPath: imagesForJS+"/loader_grupos.gif",
                 debug : 1
               });*/
-          
-             inicializar();
-            });
+            $('.nano').nanoScroller();
+            inicializar();
+        });
             
         function modificarNivel1(){
             window.location.href="[% url_prefix %]/catalogacion/estructura/datosDocumento.pl?id1=[% id1 %]&tipoAccion=MODIFICAR_NIVEL_1";
