--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -828,7 +828,7 @@ a.thumbnail:hover{border-color:#0088cc;-webkit-box-shadow:0 1px 4px rgba(0, 105,
 .nano .pane{background:#444;}
 .pagination{margin-top:11px;margin-bottom:22px;}
 .info-result{background:gainsboro;border-radius:10px;padding-left:10px;margin-bottom:10px;}
-#marco_principal{padding-top:48px;}
+#marco_principal{padding-top:48px;width:82% !important;}
 body{padding-bottom:60px;}
 #logo a{background:url("images/logo_horizontal.png") no-repeat scroll -10px 5px transparent;color:#FFFFFF;}
 #logo{float:left;}
