ordenar busquedas catalogo

--- a/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
+++ b/intranet/htdocs/intranet-tmpl/busquedas/filtrado.tmpl
@@ -8,8 +8,8 @@
 
 <script type="text/javascript">
 
-    var ORDEN;
-    var ASC= true;
+var ORDEN="";
+var ASC= true;
 
 $(document).ready(function() {
 
@@ -68,9 +68,9 @@ function limpiarCampos(side){
     }
 }
 
-    function changePageBusquedas(ini){
-        objAH.changePage(ini);
-    }
+function changePageBusquedas(ini){
+    objAH.changePage(ini);
+}
 
 
 </script>
