--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -74,7 +74,7 @@
 	
 	<fieldset>
 		   	<div class="page-header">
-        		<h1><small>#[% id1 %]</small> - [% titulo %] <small>([% nivel1_template %])</small></h1>
+        		<h1>[% titulo %] <small>([% nivel1_template %]) - #[% id1 %]</small></h1>
             	<h2>[% autor %] </h2>	
            	</div>
 		      
