--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoConfig.tmpl
@@ -60,7 +60,7 @@ function updateGuardarModificacion(responseText){
 
 $(document).ready(function() {
     actualizarTabla();
-    //zebra('datos_tabla');
+    onEnter("buscar",buscarPreferencia);
 });
 
 function actualizarTabla(){
@@ -77,7 +77,60 @@ function updateActualizarTabla(responseText){
     //zebra('datos_tabla');
 }
 
+/*
+ * buscarPreferencia
+ * Busca todas las preferencias o las que se corresponden con el string ingresado para filtrar la busqueda.
+ */
+function buscarPreferencia(){
+	objAH               = new AjaxHelper(updateBuscarPreferencia);
+	objAH.debug         = true;
+    objAH.showOverlay   = true;
+	objAH.url=URL_PREFIX+"/admin/global/preferenciasDB.pl";
+	objAH.buscar        = $("#buscar").val();
+	objAH.accion        = "BUSCAR_PREFERENCIAS";
+	objAH.categoria     = 'catalogo';
+	objAH.sendToServer();
+}
+
+function updateBuscarPreferencia(responseText){
+	$("#result").html(responseText);
+}
+
+/*
+ * limpiar
+ * Borra el texto ingresado en el componente de busqueda.
+ */
+function limpiar(){$("#buscar").val("");}
+
 </script>
+
+<div class="titulos">
+    <h3> [% "Administraci&oacute;n de preferencias de Cat&aacute;logo" | i18n %]</h3>
+</div>
+
+<form class="well form-search" onsubmit="return false">
+            <input type="text" id="buscar" name="buscar" >
+            
+              [% PERL %]
+	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Limpiar' | i18n %]",
+	                                                                    boton   => "btn",
+	                                                                    onClick => "limpiar();",
+	                                                                    title   => "[% 'Limpiar' | i18n %]",
+	                                                                    inline  => 1,
+	                                        ) ;
+	            [% END %]
+	            
+	            [% PERL %]
+	                                print C4::AR::Filtros::to_Button(   text    => "[% 'Buscar' | i18n %]",
+	                                                                    boton   => "boton_buscar",
+	                                                                    onClick => "buscarPreferencia();",
+	                                                                    title   => "[% 'Buscar' | i18n %]",
+	                                                                    inline  => 1,
+	                                        ) ;
+	            [% END %]
+	            
+</form>
+
 
 <div id="result"></div>
 
