--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -11,7 +11,8 @@
               <script type="text/javascript">
                           $(document).ready(function() {
                                       $('#input_nuevo_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarEstante();}}});
-                                      verSubEstantes([% subestante_actual %],0);
+                                      verSubEstantes('[% subestante_actual %]',0);
+                                      
                           });
               </script>
       </div>
