paginador resultados contenido estante

--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -134,9 +134,9 @@
                       [% END %] 
 
           </div>
-       
-      <div id="resultado_contenido_estante"> </div>
-
+       <div id="layer">
+          <div id="resultado_contenido_estante"> </div>
+      </div>
 </div>  
 
 
