fix en editar detalle de esquema

--- a/dev-plugins/bootstrapless/opac/DEO/variables.less
+++ b/dev-plugins/bootstrapless/opac/DEO/variables.less
@@ -34,7 +34,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @white;
+@bodyBackground:        @verdecitoclaro;
 @textColor:             @grayDark;
 
 
