--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -41,7 +41,7 @@ var jobID = 0;
         });
 
         
-        $('.fancy_link').fancybox({});
+        $('.fancy_link').fancybox();
 
         mostrarNovedades();
         mensajesContacto();
