--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -41,8 +41,6 @@ var jobID = 0;
         });
 
         
-        $('.fancy_link').fancybox();
-
         mostrarNovedades();
         mensajesContacto();
 
@@ -76,7 +74,7 @@ var jobID = 0;
 		   <br />
 	    [% END %]
 	    <br />
-	    <a class="fancy_link btn btn-inverse" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]" > 
+	    <a class="fancy_link btn btn-inverse" onclick="showTwitter();" > 
 	        <i class="icon-white icon-retweet"></i> [% 'Twitter' | i18n %]
 	    </a>
 	    
@@ -85,5 +83,21 @@ var jobID = 0;
 
 [% INCLUDE 'partials/_percent_bar.inc' %]
 
+
+<div class="modal hide fade" id="show_twitter">
+              <div class="modal-header">
+                <button class="close" data-dismiss="modal">×</button>
+                <h3>[% 'Nuevo tweet' | i18n %]<h3>
+              </div>
+
+              <div class="modal-body">
+                 <textarea id="post_twitter" name="textarea_twitter" class="input-xxlarge" onkeyup="enableDisableButton();" autofocus="autofocus"></textarea>
+                 <p class="help-block">[% 'Sea breve, no m&aacute;s de 140 caracteres' | i18n %].</p>
+              </div>
+
+              <div class="modal-footer">
+                  <button type="submit" id="publicar_twitter" class="btn btn-primary" onclick="publicar_twitter();">[% 'Tweetear' | i18n %]</button>
+              </div>
+</div>   
 
 [% INCLUDE 'intranet-bottom.inc' %]
