--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -86,7 +86,7 @@ var jobID = 0;
 
 <div class="modal hide fade" id="show_twitter">
               <div class="modal-header">
-                <button class="close" data-dismiss="modal">×</button>
+                <a href="#" class="close" data-dismiss="modal">×</a>
                 <h3>[% 'Nuevo tweet' | i18n %]<h3>
               </div>
 
