--- a/dev-plugins/bootstrapless/opac/DEO/variables.less
+++ b/dev-plugins/bootstrapless/opac/DEO/variables.less
@@ -17,7 +17,7 @@
 @grayLight:             #999;
 @grayLighter:           #eee;
 @white:                 #fff;
-@verdecitoclaro:	#D0DCE0;
+@verdecitoclaro:	    @white;
 
 
 // Accent colors
