--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -70,7 +70,7 @@
                 </table>
             </div>
         [% ELSE %]
-            <h2>[% 'No hay novedades' | i18n %]</h2>
+            <div class="well">[% 'No hay novedades' | i18n %]</div>
         [% END %]
 </fieldset>
 <div class="form-actions">
